fixed horizontal scroll for screens wider than 1100px and fixes for pixel perfect

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@
 .header__links__list {
     display: flex;
     margin-left: 50px;
+    padding-left: 1px;
     gap: 33px;
     list-style: circle;
 }
@@ -51,10 +52,11 @@
     align-self: center;
     justify-self: end;
     margin-right: 50px;
+    padding-left: 1px;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24.3px;
+    line-height: 23.9px;
     text-underline-offset: 4px;
     max-width: 240px;
 }
@@ -282,7 +284,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 100px;
+    margin-top: 102px;
     margin-bottom: 100px;
     text-transform: uppercase;
 }
@@ -291,8 +293,8 @@
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 23.90px;
-    margin-top: 25px;
+    line-height: 24px;
+    margin-top: 23px;
 }
 
 /* footer ----------------*/
